--- a/example/package.json
+++ b/example/package.json
@@ -13,11 +13,11 @@
   "devDependencies": {
     "@aws-cdk/assert": "^1.15.0",
     "@types/jest": "^24.0.18",
+    "aws-cdk": "^1.15.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
-    "aws-cdk": "^1.15.0",
     "ts-node": "^8.1.0",
-    "typescript": "~3.6.2"
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "@aws-cdk/aws-kinesis": "^1.15.0",
