--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@aws-cdk/assert": "^1.15.0",
     "@types/jest": "^24.0.18",
+    "@types/node": "^12.12.8",
     "aws-cdk": "^1.15.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-kinesis": "^1.15.0",
+    "@aws-cdk/aws-lambda": "^1.15.0",
     "@aws-cdk/core": "^1.15.0",
     "source-map-support": "^0.5.9"
   }
