--- a/example/package.json
+++ b/example/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "@aws-cdk/aws-kinesis": "^1.16.3",
     "@aws-cdk/aws-lambda": "^1.16.3",
+    "@aws-cdk/aws-events": "^1.16.3",
+    "@aws-cdk/aws-events-targets": "^1.16.3",
+    "@aws-cdk/aws-iam": "^1.16.3",
     "@aws-cdk/core": "^1.16.3",
     "source-map-support": "^0.5.9"
   }
