--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-cloudwatch-log-forwarder",
+  "name": "@mabead/aws-cloudwatch-log-forwarder",
   "version": "0.1.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
