--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@mabead/aws-cloudwatch-log-forwarder",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
+    "prepublishOnly": "tsc",
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest"
